# CoIC

./: README.md  ai_meeting_assistant.py  pyproject.toml
