[tool.poetry]
name = "ai-meeting-assistant-debug"
version = "0.1.0"
description = "Minimal setup for debugging"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.0"
sounddevice = "^0.5.0"
numpy = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"